--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -27,22 +27,34 @@ cmake(
     lib_source = ":srcs",
     out_headers_only = False,
     out_shared_libs = select({
-        "@bazel_tools//src/conditions:linux": [],
-        "//conditions:default": [
+        "@bazel_tools//src/conditions:windows": [
+            "libsnmallocshim-checks-memcpy-only.dll",
+            "libsnmallocshim-checks.dll",
+            "libsnmallocshim.dll",
+        ],
+        "@bazel_tools//src/conditions:macos": [
             "libsnmallocshim-checks-memcpy-only.dylib",
             "libsnmallocshim-checks.dylib",
             "libsnmallocshim.dylib",
         ],
+        "//conditions:default": [],
     }),
-    out_static_libs = [
-        "libsnmallocshim-static.a",
-        "libsnmalloc-new-override.a",
-    ],
+    out_static_libs = select({
+        "@bazel_tools//src/conditions:windows": [
+            "libsnmallocshim-static.lib",
+            "libsnmalloc-new-override.lib",
+        ],
+        "//conditions:default": [
+            "libsnmallocshim-static.a",
+            "libsnmalloc-new-override.a",
+        ],
+    }),
     postfix_script = "ninja",
     visibility = ["//visibility:public"],
 )
 
 cmake(
+    exe,
     name = "snmalloc-rs",
     build_args = [
         "-j12",
@@ -57,15 +69,29 @@ cmake(
     generate_args = ["-G Ninja"],
     lib_source = ":srcs",
     out_headers_only = False,
-    out_shared_libs = [
-        "libsnmallocshim-checks-memcpy-only.dylib",
-        "libsnmallocshim-checks.dylib",
-        "libsnmallocshim.dylib",
-    ],
-    out_static_libs = [
-        "libsnmallocshim-static.a",
-        "libsnmalloc-new-override.a",
-    ],
+    out_shared_libs = select({
+        "@bazel_tools//src/conditions:windows": [
+            "libsnmallocshim-checks-memcpy-only.dll",
+            "libsnmallocshim-checks.dll",
+            "libsnmallocshim.dll",
+        ],
+        "@bazel_tools//src/conditions:macos": [
+            "libsnmallocshim-checks-memcpy-only.dylib",
+            "libsnmallocshim-checks.dylib",
+            "libsnmallocshim.dylib",
+        ],
+        "//conditions:default": [],
+    }),
+    out_static_libs = select({
+        "@bazel_tools//src/conditions:windows": [
+            "libsnmallocshim-static.lib",
+            "libsnmalloc-new-override.lib",
+        ],
+        "//conditions:default": [
+            "libsnmallocshim-static.a",
+            "libsnmalloc-new-override.a",
+        ],
+    }),
     postfix_script = "ninja",
     visibility = ["//visibility:public"],
 )
