add missing flags + enable stats

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -16,10 +16,19 @@ cmake(
     name = "snmalloc",
     cache_entries = {
         "CMAKE_BUILD_TYPE": "Release",
+        "CMAKE_INTERPROCEDURAL_OPTIMIZATION": "TRUE",
         "SNMALLOC_OPTIMISE_FOR_CURRENT_MACHINE": "ON",
         "SNMALLOC_USE_SELF_VENDORED_STL": "OFF",
         "SNMALLOC_IPO": "ON",
+        "USE_SNMALLOC_STATS": "ON",
     },
+    copts = [
+        "-fuse-ld=lld",
+        "-stdlib=libc++",
+        "-mcx16",
+        "-Wno-error=unknown-pragmas",
+        "-Qunused-arguments",
+    ],
     generate_args = ["-G Ninja"],
     lib_source = ":srcs",
     out_headers_only = False,
@@ -43,11 +52,20 @@ cmake(
     name = "snmalloc-rs",
     cache_entries = {
         "CMAKE_BUILD_TYPE": "Release",
+        "CMAKE_INTERPROCEDURAL_OPTIMIZATION": "TRUE",
         "SNMALLOC_RUST_SUPPORT": "ON",
         "SNMALLOC_OPTIMISE_FOR_CURRENT_MACHINE": "ON",
         "SNMALLOC_USE_SELF_VENDORED_STL": "OFF",
         "SNMALLOC_IPO": "ON",
+        "USE_SNMALLOC_STATS": "ON",
     },
+    copts = [
+        "-fuse-ld=lld",
+        "-stdlib=libc++",
+        "-mcx16",
+        "-Wno-error=unknown-pragmas",
+        "-Qunused-arguments",
+    ],
     generate_args = ["-G Ninja"],
     lib_source = ":srcs",
     out_headers_only = False,
