add missing copts

--- a/fuzzing/BUILD.bazel
+++ b/fuzzing/BUILD.bazel
@@ -7,9 +7,11 @@ cc_test(
     name = "snmalloc_fuzzer",
     srcs = ["snmalloc-fuzzer.cpp"],
     copts = [
-        "-fexperimental-library",  # needed for std::execution::unseq,
         "-fsanitize=address",
-    ],
+    ] + select({
+        "@bazel_tools//tools/cpp:clang-cl": ["-fexperimental-library"], # needed for std::execution::unseq,
+        "//conditions:default": ["-mcx16"],
+    }),
     defines = [
         "SNMALLOC_USE_WAIT_ON_ADDRESS=0",
         "ADDRESS_SANITIZER",
