add libc api feature (#198)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,4 @@ lto = ["snmalloc-sys/lto"]
 notls = ["snmalloc-sys/notls"]
 stats = ["snmalloc-sys/stats"]
 usewait-on-address = ["snmalloc-sys/usewait-on-address"]
+libc-api = ["snmalloc-sys/libc-api"]
