--- a/fuzzing/BUILD.bazel
+++ b/fuzzing/BUILD.bazel
@@ -9,8 +9,8 @@ cc_test(
     copts = [
         "-fsanitize=address",
     ] + select({
-        "@bazel_tools//tools/cpp:clang-cl": ["-fexperimental-library"], # needed for std::execution::unseq,
-        "//conditions:default": ["-mcx16", "-stdlib=libc++"],
+        "@bazel_tools//tools/cpp:clang-cl": ["-fexperimental-library"],  # needed for std::execution::unseq,
+        "//conditions:default": ["-mcx16"],
     }),
     defines = [
         "SNMALLOC_USE_WAIT_ON_ADDRESS=0",
