--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,6 +114,8 @@ jobs:
         # Build each combination of OS and release/debug variants
         os: [ "ubuntu-24.04", "ubuntu-22.04", "ubuntu-24.04-arm",  "macos-13", "macos-14", "macos-15"  ]
         build-type: [ "Release", "Debug" ]
+      # Don't abort runners if a single one fails
+      fail-fast: false
     runs-on: ${{ matrix.os }}
     name: Bazel - ${{ matrix.os }} ${{ matrix.build-type }}
     steps:
