--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,7 +112,7 @@ jobs:
     strategy:
       matrix:
         # Build each combination of OS and release/debug variants
-        os: [ "ubuntu-24.04", "ubuntu-22.04", "ubuntu-24.04-arm", "macos-13", "macos-14", "macos-15"  ]
+        os: [ "ubuntu-24.04", "ubuntu-22.04", "macos-13", "macos-14", "macos-15"  ]
         build-type: [ "Release", "Debug" ]
       # Don't abort runners if a single one fails
       fail-fast: false
