--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -399,14 +399,14 @@ jobs:
     strategy:
       matrix:
         # Build each combination of OS and release/debug variants
-        os: [ windows-2019, windows-2022, windows-2025 ]
+        os: [ windows-2022, windows-2025 ]
         build-type: [ Release, Debug ]
         arch: [ Win32, x64 ]
         toolchain: [ "", "-T ClangCL" ]
         extra-cmake-flags: [ "" ]
         # Add an extra check for the Windows 8 compatible PAL
         include:
-          - os: windows-2019
+          - os: windows-2022
             build-type: Release
             arch: x64
             toolchain: ""
