Make C++ library statically linked

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -506,7 +506,7 @@ if(NOT SNMALLOC_HEADER_ONLY_LIBRARY)
   endif()
 
 
-  function(compile name TYPE ${ARGN})
+  function(compile_core name TYPE ${ARGN})
     add_library(${name} ${TYPE} ${ARGN})
     target_link_libraries(${name} snmalloc)
     set_target_properties(${name} PROPERTIES CXX_VISIBILITY_PRESET hidden INTERPROCEDURAL_OPTIMIZATION ${SNMALLOC_COMPILER_SUPPORT_IPO})
@@ -554,7 +554,7 @@ if(NOT SNMALLOC_HEADER_ONLY_LIBRARY)
   endfunction()
 
   function(compile_noexc name TYPE ${ARGN})
-    compile(${name} ${TYPE} ${ARGN})
+    compile_core(${name} ${TYPE} ${ARGN})
 
     target_compile_definitionS(${name} PRIVATE -DSNMALLOC_NOEXC)
     if(MSVC)
@@ -571,6 +571,20 @@ if(NOT SNMALLOC_HEADER_ONLY_LIBRARY)
         else()
           set_target_properties(${name} PROPERTIES LINKER_LANGUAGE C)
         endif()
+      endif()
+    endif()
+  endfunction()
+
+  function(compile name TYPE ${ARGN})
+    compile_core(${name} ${TYPE} ${ARGN})
+
+    if(MSVC)
+    else()
+      # We can't dp --notstdlib++ as we are using exceptions, but we 
+      # can make it a static dependency, which we aren't really using
+      # as the interesting stuff for exceptions is in libgcc_s
+      if (NOT ${SNMALLOC_CLEANUP} STREQUAL CXX11_DESTRUCTORS)
+        target_link_options(${name} PRIVATE -static-libstdc++)
       endif()
     endif()
   endfunction()
@@ -645,7 +659,7 @@ if(NOT SNMALLOC_HEADER_ONLY_LIBRARY)
 
     foreach (MITIGATION ${MITIGATIONS})
       set(DEFINES "SNMALLOC_CHECK_CLIENT_MITIGATIONS=${MITIGATION}")
-      add_shim(snmallocshim-${MITIGATION} SHARED ${SHIM_FILES})
+      compile(snmallocshim-${MITIGATION} SHARED ${ALLOC})
       target_compile_definitions(snmallocshim-${MITIGATION} PRIVATE ${DEFINES})
       if (SNMALLOC_BUILD_TESTING)
         make_tests(${MITIGATION} ${DEFINES})
@@ -660,7 +674,7 @@ if(NOT SNMALLOC_HEADER_ONLY_LIBRARY)
       set(MITIGATIONSET "${MITIGATIONSET}+${MITIGATION}")
       message(STATUS "MITIGATIONSET: ${COUNT} -> ${MITIGATIONSET}")
       set(DEFINES "-DSNMALLOC_CHECK_CLIENT_MITIGATIONS=${MITIGATIONSET}")
-      add_shim(snmallocshim-${MITIGATIONNAME} SHARED ${SHIM_FILES})
+      compile(snmallocshim-${MITIGATIONNAME} SHARED ${ALLOC})
       target_compile_definitions(snmallocshim-${MITIGATIONNAME} PRIVATE ${DEFINES})
       if (SNMALLOC_BUILD_TESTING)
         make_tests(${MITIGATIONNAME} ${DEFINES})
